--- a/tests/debug/index.html
+++ b/tests/debug/index.html
@@ -22,9 +22,8 @@
 </head>
 <body>
 <div class='container'>
-    <h3>navigation.js</h3>
-    <p>Should you re-route the user? <span id='reroute'>false</span></p>
-    <p>Current Step: <span id='step'></span></p>
+    <p id='step'></p>
+    <p>Should you re-route the user: <span id='reroute'></span></p>
 </div>
 <div id='map'></div>
 <script src='bundle.js'></script>
