--- a/tests/debug/index.html
+++ b/tests/debug/index.html
@@ -18,6 +18,14 @@
       min-width: 290px;
   }
 
+  .flash {
+      animation: blinker 0.5s linear infinite;
+  }
+
+  @keyframes blinker {
+      50% { opacity: 0.0; }
+  }
+
 </style>
 </head>
 <body>
