Add more test cases

--- a/tests/debug/index.html
+++ b/tests/debug/index.html
@@ -17,6 +17,19 @@
       background-color: white;
       min-width: 290px;
   }
+  #places {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      padding: 20px;
+      z-index: 100;
+      background-color: white;
+      max-width: 290px;
+  }
+
+  a {
+      text-decoration: none;
+  }
 
 </style>
 </head>
@@ -24,6 +37,9 @@
 <div class='container'>
     <p id='step'></p>
     <p>Should you re-route the user: <span id='reroute'></span></p>
+</div>
+<div id='places'>
+    <p>Select a route to test</p>
 </div>
 <div id='map'></div>
 <script src='bundle.js'></script>
