Calculate user completing a maneuver better

--- a/tests/debug/index.html
+++ b/tests/debug/index.html
@@ -37,6 +37,14 @@
       50% { opacity: 0.0; }
   }
 
+  .flashonce {
+      animation: flasher 1s linear 1;
+  }
+
+  @keyframes flasher {
+      50% { opacity: 0.0; }
+  }
+
   .arrows {
       bottom: 0;
       left:0;
